--- a/views/organizationEducator.ejs
+++ b/views/organizationEducator.ejs
@@ -156,10 +156,10 @@
                             <h2 style="margin: 12px 0;">Organization Detail</h2>
                         </div>
                         <div class="col-lg-2">
-                            <p class="navtabs">Class (12)</p>
+                            <p class="navtabs">Class (<%=data.classes.length%>)</p>
                         </div>
                         <div class="col-lg-2">
-                            <p class="navtabs" style="color: #FD585C;border-bottom: 4px solid #FD585C;">Educators (20)</p>
+                            <p class="navtabs" style="color: #FD585C;border-bottom: 4px solid #FD585C;">Educators (<%=data.Educators.length%>)</p>
                         </div>
                     </div>
                 <!-- </div> -->
@@ -191,116 +191,19 @@
                 <div class="col-lg-12">
                     
                     <div class="row">
+                       <%for(i of educators){%>
                         <div class="col-lg-3">
+                            <div class="educatorDetails">
+                                <div class="d-flex justify-content-left">
+                                    <a href="#"><img src="/public/img/person_circle.svg"></a>
+                                    <p><%=i[0].username%></p>
+                                </div>
+                            </div>
+        
+                        </div>
+
+                       <%}%>
                     
-                            <div class="educatorDetails">
-                                <div class="d-flex justify-content-left">
-                                    <a href="#"><img src="/public/img/person_circle.svg"></a>
-                                    <p>John Parkar</p>
-                                </div>
-                            </div>
-        
-                        </div>
-                        <div class="col-lg-3">
-                            
-                            <div class="educatorDetails">
-                                <div class="d-flex justify-content-left">
-                                    <a href="#"><img src="/public/img/person_circle.svg"></a>
-                                    <p>John Parkar</p>
-                                </div>
-                            </div>
-        
-                        </div>
-                        <div class="col-lg-3">
-                            
-                            <div class="educatorDetails">
-                                <div class="d-flex justify-content-left">
-                                    <a href="#"><img src="/public/img/person_circle.svg"></a>
-                                    <p>John Parkar</p>
-                                </div>
-                            </div>
-        
-                        </div>
-                        <div class="col-lg-3">
-                            
-                            <div class="educatorDetails">
-                                <div class="d-flex justify-content-left">
-                                    <a href="#"><img src="/public/img/person_circle.svg"></a>
-                                    <p>John Parkar</p>
-                                </div>
-                            </div>
-        
-                        </div>
-                        <div class="col-lg-3">
-                            
-                            <div class="educatorDetails">
-                                <div class="d-flex justify-content-left">
-                                    <a href="#"><img src="/public/img/person_circle.svg"></a>
-                                    <p>John Parkar</p>
-                                </div>
-                            </div>
-        
-                        </div>
-                        <div class="col-lg-3">
-                            
-                            <div class="educatorDetails">
-                                <div class="d-flex justify-content-left">
-                                    <a href="#"><img src="/public/img/person_circle.svg"></a>
-                                    <p>John Parkar</p>
-                                </div>
-                            </div>
-        
-                        </div>
-                        <div class="col-lg-3">
-                            
-                            <div class="educatorDetails">
-                                <div class="d-flex justify-content-left">
-                                    <a href="#"><img src="/public/img/person_circle.svg"></a>
-                                    <p>John Parkar</p>
-                                </div>
-                            </div>
-        
-                        </div>
-                        <div class="col-lg-3">
-                            
-                            <div class="educatorDetails">
-                                <div class="d-flex justify-content-left">
-                                    <a href="#"><img src="/public/img/person_circle.svg"></a>
-                                    <p>John Parkar</p>
-                                </div>
-                            </div>
-        
-                        </div>
-                        <div class="col-lg-3">
-                            
-                            <div class="educatorDetails">
-                                <div class="d-flex justify-content-left">
-                                    <a href="#"><img src="/public/img/person_circle.svg"></a>
-                                    <p>John Parkar</p>
-                                </div>
-                            </div>
-        
-                        </div>
-                        <div class="col-lg-3">
-                            
-                            <div class="educatorDetails">
-                                <div class="d-flex justify-content-left">
-                                    <a href="#"><img src="/public/img/person_circle.svg"></a>
-                                    <p>John Parkar</p>
-                                </div>
-                            </div>
-        
-                        </div>
-                        <div class="col-lg-3">
-                            
-                            <div class="educatorDetails">
-                                <div class="d-flex justify-content-left">
-                                    <a href="#"><img src="/public/img/person_circle.svg"></a>
-                                    <p>John Parkar</p>
-                                </div>
-                            </div>
-        
-                        </div>
                     </div>
                     
                 </div>
