--- a/views/organizationClass.ejs
+++ b/views/organizationClass.ejs
@@ -242,7 +242,7 @@
                                             <a href="#">John Doe</a>
                                         </div>
                                     </div>
-                                    <a href="#"><img src="/public/img/language.svg" data-toggle="tooltip"></a>
+                                    <a href="/exportclass/<%=document._id%>"><img src="/public/img/language.svg" data-toggle="tooltip"></a>
                                     
                                 </div>
                             </div>
