--- a/views/educatorDashboard.ejs
+++ b/views/educatorDashboard.ejs
@@ -160,7 +160,7 @@
                             <div style="width: 100%;">
                                 <%if(orgname!=''){%>
                                 <div style="cursor: pointer;margin-bottom: 20px;height: 60px;background: #FD585C 0% 0% no-repeat padding-box;border-radius: 6px;">
-                                    <p style="padding: 10px 0;font-size: 24px;font-family: ProductR;letter-spacing: 0px;color: #FFFFFF;opacity: 1;"><img src="/public/img/pluswhite.svg"> Export Class</p>
+                                    <a href="/orgDetails"><p style="padding: 10px 0;font-size: 24px;font-family: ProductR;letter-spacing: 0px;color: #FFFFFF;opacity: 1;"><img src="/public/img/pluswhite.svg"> Export Class</p></a>
                                 </div>
     
                                 <p>--------------------------------Or--------------------------------</p>
