--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,9 @@
                         <li><a class="btn-primary" style="border-radius: 5px;position: relative;top: -6px;padding: 4px 8px 6px 8px;" href="/home/createproject/1"><i class="fas fa-plus" style="color: rgb(255, 255, 255);"></i>  Start Collaboration</a></li>
                         <li class="menu-has-children dropdown-toggle navprofile" style="margin-top: 0;"><a href="#" style="color: #000;background: #FFFFFF;border-radius: 50%;height: 35px;width: 35px;text-align: center;padding: 7px;"><%=firstletter%></a>
                             <ul style="right: 0 !important;left: auto !important;width: fit-content;padding-left: 1px !important;padding-right: 1px !important;padding-inline-start: 0px;background: #fff !important;">
-                                <li><a href="#">My profile</a></li>
+                                <%if(role=='org'){%>
+                                    <li><a href="/orgprofile/profile">My profile</a></li>
+                                <%}%>
                                 <li><a href="/">Logout</a></li>
                             </ul>
                         </li>
