--- a/views/organizationEducator.ejs
+++ b/views/organizationEducator.ejs
@@ -156,10 +156,10 @@
                             <h2 style="margin: 12px 0;">Organization Detail</h2>
                         </div>
                         <div class="col-lg-2">
-                            <p class="navtabs">Class (<%=data.classes.length%>)</p>
+                            <a href="/orgDetails"><p class="navtabs">Class (<%=data.classes.length%>)</p></a>
                         </div>
                         <div class="col-lg-2">
-                            <p class="navtabs" style="color: #FD585C;border-bottom: 4px solid #FD585C;">Educators (<%=data.Educators.length%>)</p>
+                            <a href="/orgDetails/educators"><p class="navtabs" style="color: #FD585C;border-bottom: 4px solid #FD585C;">Educators (<%=data.Educators.length%>)</p></a>
                         </div>
                     </div>
                 <!-- </div> -->
@@ -236,7 +236,7 @@
     <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
     <script src="https://kit.fontawesome.com/6f24662773.js" crossorigin="anonymous"></script>
 
-    <script src="js/index.js"></script>
+    <script src="/public/js/index.js"></script>
  
 </body>
 
