--- a/views/adminEC.ejs
+++ b/views/adminEC.ejs
@@ -93,7 +93,7 @@
                             <%projects.forEach(function(document){%>
                             <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12">
                                 <div class="card">
-                                    <a href="/previewofproject/<%=document._id%>"><img src="/public/img/download.jpeg" class="card-img-top" alt="..."></a>
+                                    <a href="/viewproject/<%=document._id%>"><img src="/public/img/download.jpeg" class="card-img-top" alt="..."></a>
                                     <div class="card-body">
                                         <p><%=document.project_title%></p>
                                         <h5 class="card-title"><%=document.key_contribution%></h5>
