--- a/views/adminECview.ejs
+++ b/views/adminECview.ejs
@@ -8,7 +8,7 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/adminDashboard.css">
+        <link rel="stylesheet" href="/public/css/adminDashboard.css">
 
         <title>10dem Education|Dashboard</title>
         <style>
@@ -51,16 +51,16 @@
         <div class="sidebar">
             <div style="height: 100px;"></div>
             <div class="sidebarDiv">
-                <img src="img/language.svg" class="sidebarImg">
+                <img src="/public/img/language.svg" class="sidebarImg">
             </div>
             <div class="sidebarDiv">
-                <img src="img/language.svg" class="sidebarImg">
+                <img src="/public/img/language.svg" class="sidebarImg">
             </div>
             <div class="sidebarDiv">
-                <img src="img/language.svg" class="sidebarImg">
+                <img src="/public/img/language.svg" class="sidebarImg">
             </div>
             <div class="sidebarDiv">
-                <img src="img/language.svg" class="sidebarImg">
+                <img src="/public/img/language.svg" class="sidebarImg">
             </div>
         </div>
 
@@ -70,12 +70,12 @@
                 
                 <div class="d-flex justify-content-between">
                     <div class="d-flex justify-content-between">
-                        <img src="img/logo.jpeg" style="width: 50px;height: 50px;">
+                        <img src="/public/img/logo.jpeg" style="width: 50px;height: 50px;">
                         <p style="padding: 0 8px;color: #212529;font-size: 1rem;font-family: sans-serif;">LIFECOACHING<br/>Betterlife</p>
                     </div>
                     
                     <div class="d-flex justify-content-left">
-                        <img src="img/person_circle.svg" style="width: 40px;height: 40px;border-radius: 50%;">
+                        <img src="/public/img/person_circle.svg" style="width: 40px;height: 40px;border-radius: 50%;">
                         <p style="padding: 8px;font-size: 18px;">John Doe</p>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
 
                 <div class="d-flex justify-content-left">
                     
-                    <img src="img/external.svg" style="width: 60px;height: 60px;padding: 18px;border-radius: 50%;background: #FD585C7F;">
+                    <img src="/public/img/external.svg" style="width: 60px;height: 60px;padding: 18px;border-radius: 50%;background: #FD585C7F;">
                     <h3 style="margin: 12px 0;padding: 0 20px;font-size: 30px;font-family: ProductR;color: #03293D;">Externally Collaborated Projects</h3>
                     
                 </div>
@@ -99,17 +99,17 @@
                     </div>
                     <div class="col-lg-8">
 
-                        <h1 style="margin: 30px 0;color: #03293D;font-family: ProductB;">Fundamental of Design</h1>
+                        <h1 style="margin: 30px 0;color: #03293D;font-family: ProductB;"><%=title%></h1>
                         <div class="d-flex justify-content-left">
-                            <img src="img/person_circle.svg" class="img1">
+                            <img src="/public/img/person_circle.svg" class="img1">
                             <div style="padding-left: 10px;">
                                 <p class="p1" style="color: #2727274D;">Created By</p><br>
-                                <p class="p1"><span style="color: #03293D;font-size: 20px;">Mr. Samyadeep Maneerattana</span> | <span style="font-size: 18px;">May 21, 2020</span></p><br>
+                                <p class="p1"><span style="color: #03293D;font-size: 20px;"><%=data[0].username%></span> | <span style="font-size: 18px;"><%=startdate.toDateString()%></span></p><br>
                             </div>
                         </div>
                         <hr style="height: 2px;background: #FFDB64;">
                         <h3>Subject</h3>
-                        <p style="color: #27272799;">Design | Fundamental Theory | Human Computer Interaction</p>
+                        <p style="color: #27272799;"><%=subject%></p>
                         <h3>Grade</h3>
                         <div class="d-flex justify-content-left">
                             <p class="grades">7-8 grade</p>
@@ -117,11 +117,11 @@
                             <p class="grades">9-10 grade</p>
                         </div>
                         <h3>Overview</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore eeut tedolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullass co labo nisi ut aliquip ext ea commodo consequat. Duis aute irure dolorinreprehenderit in fusd gia voluptate velit esse cillum dolore eu fugiat nulla pariatur dolor inreprehenderit in fugiaipsu m dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etd sdolore magna aliqua. Ut enim ad minim veniam, quis nostrud reeer exercitation ullamco labo nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor inreprehenderitr</p>
+                        <p><%=summary%></p>
                         <h3>Learning Outcome</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etee dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco labo nisi ut aliquip ex ea commodo consequat. Duis</p>
+                        <p><%=learningoutcome%></p>
                         <h3>Key Contribution (Community & Planet)</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore eteee dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation d ulla mco labo nisi ut aliquip ex eatt commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiatrrr tynulla pariatur uis nostrud exercitation ullamco labo nisi ut aliquip ex ea commodo consequat.</p>
+                        <p><%=keycontri%></p>
                         <h3>Activity</h3>
 
                         <div class="row" style="margin: 1rem 0 5rem 0;">
@@ -130,22 +130,22 @@
                                     <div style="width: 40px;height: 40px;margin-right: 20px;border: 1px solid #03293D;border-radius: 50%;">
                                         <p style="position: relative;bottom: 12px;padding: 15px;">1</p>
                                     </div>
-                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur lore eu fugiat nulla pariatur nulla pariatur lore eu fugiat nulla pariatur</p>
+                                    <p><%=detailsactivity%></p>
                                 </div>
                             </div>
                             <!-- <div class="col-lg-1"></div> -->
                             <div class="col-lg-1"></div>
-                            <div class="col-lg-1"><img src="img/attachment.svg" style="width: 38px;height: 38px;position: relative;top: 25px;"></div>
+                            <div class="col-lg-1"><img src="/public/img/attachment.svg" style="width: 38px;height: 38px;position: relative;top: 25px;"></div>
                             <div class="col-lg-3" style="padding-left: 0;">
                                 <div style="margin: 10px 15px;">
                                     <div class="row" style="padding: 10px;background: #FCFCFC 0% 0% no-repeat padding-box;border: 2px solid #70707029">
                                         <div class="col-lg-12 p-0 d-flex justify-content-between">
-                                            <img src="img/doc.png" style="height: 40px;width: 40px;margin-right: 15px;">
+                                            <img src="/public/img/doc.png" style="height: 40px;width: 40px;margin-right: 15px;">
                                             <div>
                                                 <p style="font-weight: 600;margin: 0;font-size: 14px;">Research report4.docx</p>
                                                 <p style="margin: 0;font-size: 14px;">2 MB</p>
                                             </div> 
-                                            <img src="img/filedownload.svg">
+                                            <img src="/public/img/filedownload.svg">
                                         </div>
                                     </div>
                                 </div>
@@ -159,7 +159,7 @@
                                                 <p style="font-weight: 600;margin: 0;font-size: 14px;">Research report4.docx</p>
                                                 <p style="margin: 0;font-size: 14px;">2 MB</p>
                                             </div> 
-                                            <img src="img/filedownload.svg">
+                                            <img src="/public/img/filedownload.svg">
                                         </div>
                                     </div>
                                 </div>
@@ -168,12 +168,12 @@
                                 <div style="margin: 10px 15px;">
                                     <div class="row" style="padding: 10px;background: #FCFCFC 0% 0% no-repeat padding-box;border: 2px solid #70707029">
                                         <div class="col-lg-12 p-0 d-flex justify-content-between">
-                                            <img src="img/image.svg" style="height: 40px;width: 40px;margin-right: 15px;">
+                                            <img src="/public/img/image.svg" style="height: 40px;width: 40px;margin-right: 15px;">
                                             <div>
                                                 <p style="font-weight: 600;margin: 0;font-size: 14px;">Research report4.docx</p>
                                                 <p style="margin: 0;font-size: 14px;">2 MB</p>
                                             </div> 
-                                            <img src="img/filedownload.svg">
+                                            <img src="/public/img/filedownload.svg">
                                         </div>
                                     </div>
                                 </div>
@@ -186,15 +186,15 @@
 
                         <div class="d-flex justify-content-between">
                             <div class="d-flex justify-content-left">
-                                <img src="img/person_circle.svg" class="img1">
+                                <img src="/public/img/person_circle.svg" class="img1">
                                 <div style="padding-left: 10px;">
                                     <p class="p1" style="color: #2727274D;">Created By</p><br>
-                                    <p class="p1"><span style="color: #03293D;font-size: 20px;">Mr. Samyadeep Maneerattana</span> | <span style="font-size: 18px;">May 21, 2020</span></p><br>
+                                    <p class="p1"><span style="color: #03293D;font-size: 20px;"><%=data[0].username%></span> | <span style="font-size: 18px;"><%=enddate.toDateString()%></span></p><br>
                                     <p class="p1" style="color: #2727274D;">Australia</p>
                                 </div>
                             </div>
                             <div class="d-flex justify-content-left">
-                                <img src="img/person_circle.svg" class="img1">
+                                <img src="/public/img/person_circle.svg" class="img1">
                                 <div style="padding-left: 10px;">
                                     <p class="p1" style="color: #2727274D;">Collaborated with</p><br>
                                     <p class="p1"><span style="color: #03293D;font-size: 20px;">Mr. Samyadeep Maneerattana</span> | <span style="font-size: 18px;">May 21, 2020</span></p><br>
