--- a/views/adminProfile2.ejs
+++ b/views/adminProfile2.ejs
@@ -112,8 +112,9 @@
                                 <a href="/orgprofile/profile2"><p style="color: #FD585C;text-align: center;cursor: pointer;">Org Details</p></a>
                             </div>
                             <div class="col-lg-2">
-                                <p style="color: #2727274D;text-align: center;cursor: pointer;">Change Password</p>
+                                <a href="/orgprofile/change-password"><p style="color: #2727274D;text-align: center;cursor: pointer;">Change Password</p></a>
                             </div>
+                            
                             <div class="col-lg-2">
                                 <p style="color: #2727274D;text-align: center;cursor: pointer;">Set Permission</p>
                             </div>
