--- a/views/adminDashboard2.ejs
+++ b/views/adminDashboard2.ejs
@@ -59,7 +59,7 @@
                                 <h1><%=totalnoofclasses%></h1>
                                 <p>Total Classes</p>
                             </div>
-                            <div class="arrow-adjust">
+                            <div onclick="window.location.href='/all-classes'" class="arrow-adjust">
                                 <img src="/public/img/arrow-right.svg">
                             </div>
                         </div>
@@ -70,7 +70,7 @@
                                 <h1><%=totalnoofeducators%></h1>
                                 <p>Total Educators</p>
                             </div>
-                            <div class="arrow-adjust">
+                            <div onclick="window.location.href='/all-Educators'" class="arrow-adjust">
                                 <img src="/public/img/arrow-right.svg">
                             </div>
                         </div>
